// Code generated by sqlc. DO NOT EDIT.
// versions:
//   sqlc v1.30.0

package db

import (
	"ai-zombie-defense/db/types"
)

type CosmeticItem struct {
	CosmeticID     int64           `json:"cosmetic_id"`
	Name           string          `json:"name"`
	Description    *string         `json:"description"`
	Slot           string          `json:"slot"`
	Category       *string         `json:"category"`
	Rarity         string          `json:"rarity"`
	UnlockLevel    int64           `json:"unlock_level"`
	DataCost       int64           `json:"data_cost"`
	IsPrestigeOnly int64           `json:"is_prestige_only"`
	CreatedAt      types.Timestamp `json:"created_at"`
}

type CurrencyTransaction struct {
	TransactionID   int64           `json:"transaction_id"`
	PlayerID        int64           `json:"player_id"`
	Amount          int64           `json:"amount"`
	BalanceAfter    int64           `json:"balance_after"`
	TransactionType string          `json:"transaction_type"`
	ReferenceID     *int64          `json:"reference_id"`
	CreatedAt       types.Timestamp `json:"created_at"`
}

type Friend struct {
	PlayerID  int64           `json:"player_id"`
	FriendID  int64           `json:"friend_id"`
	Status    string          `json:"status"`
	CreatedAt types.Timestamp `json:"created_at"`
	UpdatedAt types.Timestamp `json:"updated_at"`
}

type JoinToken struct {
	JoinTokenID int64               `json:"join_token_id"`
	Token       string              `json:"token"`
	PlayerID    int64               `json:"player_id"`
	ServerID    int64               `json:"server_id"`
	ExpiresAt   types.Timestamp     `json:"expires_at"`
	CreatedAt   types.Timestamp     `json:"created_at"`
	UsedAt      types.NullTimestamp `json:"used_at"`
}

type LeaderboardEntry struct {
	LeaderboardID    int64           `json:"leaderboard_id"`
	PlayerID         int64           `json:"player_id"`
	Period           string          `json:"period"`
	Rank             int64           `json:"rank"`
	Score            int64           `json:"score"`
	MatchesPlayed    int64           `json:"matches_played"`
	AvgKillsPerMatch float64         `json:"avg_kills_per_match"`
	AvgWavesSurvived float64         `json:"avg_waves_survived"`
	UpdatedAt        types.Timestamp `json:"updated_at"`
}

type Loadout struct {
	LoadoutID int64           `json:"loadout_id"`
	PlayerID  int64           `json:"player_id"`
	Name      string          `json:"name"`
	IsActive  int64           `json:"is_active"`
	CreatedAt types.Timestamp `json:"created_at"`
	UpdatedAt types.Timestamp `json:"updated_at"`
}

type LoadoutCosmetic struct {
	LoadoutID  int64  `json:"loadout_id"`
	CosmeticID int64  `json:"cosmetic_id"`
	Slot       string `json:"slot"`
}

type LootTable struct {
	LootTableID int64           `json:"loot_table_id"`
	Name        string          `json:"name"`
	Description *string         `json:"description"`
	DropChance  float64         `json:"drop_chance"`
	IsActive    int64           `json:"is_active"`
	CreatedAt   types.Timestamp `json:"created_at"`
}

type LootTableEntry struct {
	LootEntryID int64 `json:"loot_entry_id"`
	LootTableID int64 `json:"loot_table_id"`
	CosmeticID  int64 `json:"cosmetic_id"`
	Weight      int64 `json:"weight"`
	MinQuantity int64 `json:"min_quantity"`
	MaxQuantity int64 `json:"max_quantity"`
}

type Match struct {
	MatchID            int64               `json:"match_id"`
	ServerID           int64               `json:"server_id"`
	MapName            string              `json:"map_name"`
	GameMode           string              `json:"game_mode"`
	StartTime          types.Timestamp     `json:"start_time"`
	EndTime            types.NullTimestamp `json:"end_time"`
	Outcome            string              `json:"outcome"`
	WavesSurvived      int64               `json:"waves_survived"`
	TotalZombiesKilled int64               `json:"total_zombies_killed"`
	TotalPlayers       int64               `json:"total_players"`
}

type Player struct {
	PlayerID     int64               `json:"player_id"`
	Username     string              `json:"username"`
	Email        string              `json:"email"`
	PasswordHash string              `json:"password_hash"`
	CreatedAt    types.Timestamp     `json:"created_at"`
	LastLoginAt  types.NullTimestamp `json:"last_login_at"`
	IsBanned     int64               `json:"is_banned"`
	BannedReason *string             `json:"banned_reason"`
	BannedUntil  types.NullTimestamp `json:"banned_until"`
}

type PlayerCosmetic struct {
	PlayerID    int64           `json:"player_id"`
	CosmeticID  int64           `json:"cosmetic_id"`
	UnlockedAt  types.Timestamp `json:"unlocked_at"`
	UnlockedVia string          `json:"unlocked_via"`
}

type PlayerMatchStat struct {
	PlayerID           int64 `json:"player_id"`
	MatchID            int64 `json:"match_id"`
	WavesSurvived      int64 `json:"waves_survived"`
	ZombiesKilled      int64 `json:"zombies_killed"`
	Deaths             int64 `json:"deaths"`
	ScrapEarned        int64 `json:"scrap_earned"`
	DataEarned         int64 `json:"data_earned"`
	DamageDealt        int64 `json:"damage_dealt"`
	DamageTaken        int64 `json:"damage_taken"`
	BuildingsBuilt     int64 `json:"buildings_built"`
	BuildingsDestroyed int64 `json:"buildings_destroyed"`
	HealingGiven       int64 `json:"healing_given"`
	Revives            int64 `json:"revives"`
	Score              int64 `json:"score"`
}

type PlayerProgression struct {
	PlayerID           int64           `json:"player_id"`
	Level              int64           `json:"level"`
	Experience         int64           `json:"experience"`
	PrestigeLevel      int64           `json:"prestige_level"`
	DataCurrency       int64           `json:"data_currency"`
	TotalMatchesPlayed int64           `json:"total_matches_played"`
	TotalWavesSurvived int64           `json:"total_waves_survived"`
	TotalKills         int64           `json:"total_kills"`
	TotalDeaths        int64           `json:"total_deaths"`
	TotalScrapEarned   int64           `json:"total_scrap_earned"`
	TotalDataEarned    int64           `json:"total_data_earned"`
	UpdatedAt          types.Timestamp `json:"updated_at"`
}

type PlayerSetting struct {
	PlayerID         int64           `json:"player_id"`
	KeyBindings      *string         `json:"key_bindings"`
	MouseSensitivity *float64        `json:"mouse_sensitivity"`
	UiScale          *float64        `json:"ui_scale"`
	ColorBlindMode   int64           `json:"color_blind_mode"`
	SubtitlesEnabled int64           `json:"subtitles_enabled"`
	CreatedAt        types.Timestamp `json:"created_at"`
	UpdatedAt        types.Timestamp `json:"updated_at"`
}

type Server struct {
	ServerID       int64           `json:"server_id"`
	IpAddress      string          `json:"ip_address"`
	Port           int64           `json:"port"`
	AuthToken      *string         `json:"auth_token"`
	Name           string          `json:"name"`
	MapRotation    *string         `json:"map_rotation"`
	MaxPlayers     int64           `json:"max_players"`
	CurrentPlayers int64           `json:"current_players"`
	IsOnline       int64           `json:"is_online"`
	LastHeartbeat  *string         `json:"last_heartbeat"`
	Region         *string         `json:"region"`
	Version        *string         `json:"version"`
	CreatedAt      types.Timestamp `json:"created_at"`
}

type ServerFavorite struct {
	PlayerID int64           `json:"player_id"`
	ServerID int64           `json:"server_id"`
	AddedAt  types.Timestamp `json:"added_at"`
	Note     *string         `json:"note"`
}

type Session struct {
	SessionID int64           `json:"session_id"`
	PlayerID  int64           `json:"player_id"`
	Token     string          `json:"token"`
	ExpiresAt types.Timestamp `json:"expires_at"`
	CreatedAt types.Timestamp `json:"created_at"`
	IpAddress *string         `json:"ip_address"`
	UserAgent *string         `json:"user_agent"`
}
