@startuml
!include https://raw.githubusercontent.com/plantuml-stdlib/C4-PlantUML/master/C4_Component.puml

title C4 Code-level Class Diagram for Account Service

package "Account Service" {
    class AccountService <<Component>> {
        +GetProfile(playerID: int): PlayerProfile
        +UpdateProfile(playerID: int, data: UpdateProfileDTO): boolean
        +ValidateUser(username: string): boolean
        +GetSettings(playerID: int): PlayerSettings
        +UpdateSettings(playerID: int, settings: PlayerSettings): boolean
    }

    class PlayerProfile <<DTO>> {
        +PlayerID: int
        +Username: string
        +Email: string
        +CreatedAt: timestamp
        +LastLoginAt: timestamp
        +IsBanned: boolean
    }

    class UpdateProfileDTO <<DTO>> {
        +Username: string
        +Email: string
    }
}

package "Data Models (ERD Entities)" {
    class Player <<Entity>> {
        +player_id: int <<PK>>
        +username: varchar
        +email: varchar
        +password_hash: varchar
        +created_at: timestamp
        +last_login_at: timestamp
        +is_banned: boolean
        +banned_reason: text
        +banned_until: timestamp
    }

    class Session <<Entity>> {
        +session_id: int <<PK>>
        +player_id: int <<FK>>
        +token: varchar
        +expires_at: timestamp
        +created_at: timestamp
        +ip_address: varchar
        +user_agent: text
    }

    class PlayerSettings <<Entity>> {
        +player_id: int <<PK>> <<FK>>
        +key_bindings: text
        +mouse_sensitivity: decimal
        +ui_scale: decimal
        +color_blind_mode: boolean
        +subtitles_enabled: boolean
        +created_at: timestamp
        +updated_at: timestamp
    }
}

AccountService ..> PlayerProfile : returns
AccountService ..> UpdateProfileDTO : uses

AccountService --> Player : manages
AccountService --> Session : manages
AccountService --> PlayerSettings : manages

@enduml
